Refactor ACAS service to use WebClient instead of RestTemplate for API calls