@@ -1,6 +1,10 @@
 package uk.gov.hmcts.ethos.replacement.docmosis.service;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
+import com.fasterxml.jackson.databind.ObjectMapper;
+import okhttp3.mockwebserver.MockResponse;
+import okhttp3.mockwebserver.MockWebServer;
+import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -8,34 +12,25 @@ import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.NullSource;
 import org.junit.jupiter.params.provider.ValueSource;
 import org.springframework.boot.test.mock.mockito.MockBean;
-import org.springframework.http.HttpMethod;
-import org.springframework.http.HttpStatus;
+import org.springframework.http.HttpHeaders;
 import org.springframework.http.MediaType;
 import org.springframework.test.context.junit.jupiter.SpringExtension;
-import org.springframework.test.web.client.ExpectedCount;
-import org.springframework.test.web.client.MockRestServiceServer;
-import org.springframework.web.client.RestTemplate;
+import org.springframework.web.reactive.function.client.WebClient;
 import uk.gov.hmcts.ecm.common.model.ccd.CaseData;
 import uk.gov.hmcts.ecm.common.model.ccd.CaseDetails;
 import uk.gov.hmcts.ecm.common.model.ccd.DocumentInfo;
 import uk.gov.hmcts.ecm.common.model.ccd.items.RespondentSumTypeItem;
 import uk.gov.hmcts.ecm.common.model.ccd.types.RespondentSumType;
+import uk.gov.hmcts.ethos.replacement.docmosis.model.AcasCertificate;
 
 import java.io.IOException;
-import java.net.URISyntaxException;
-import java.nio.file.Files;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.Objects;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.when;
-import static org.springframework.test.web.client.match.MockRestRequestMatchers.method;
-import static org.springframework.test.web.client.match.MockRestRequestMatchers.requestTo;
-import static org.springframework.test.web.client.response.MockRestResponseCreators.withStatus;
 
 @ExtendWith(SpringExtension.class)
 class AcasServiceTest {
@@ -47,19 +42,29 @@ class AcasServiceTest {
     private AcasService acasService;
     private CaseData caseData;
     private CaseDetails caseDetails;
-    private RestTemplate restTemplate;
+    private MockWebServer mockWebServer;
+    private ObjectMapper objectMapper;
     private List<String> errors;
 
-    private static final String ACAS_BASE_URL = "https://api-dev-acas-01.azure-api.net/ECCLUAT";
     private static final String ACAS_API_KEY = "dummyApiKey";
     private static final String AUTH_TOKEN = "authToken";
     private static final String NOT_FOUND_OBJECT = "[{\"CertificateNumber\":\"A123456/12/12\","
                                                    + "\"CertificateDocument\":\"not found\"}]";
 
     @BeforeEach
-    void setUp() throws URISyntaxException, IOException {
-        restTemplate = new RestTemplate();
-        acasService = new AcasService(tornadoService, restTemplate, ACAS_BASE_URL, ACAS_API_KEY);
+    void setUp() throws IOException {
+        // Initialize MockWebServer for WebClient testing
+        mockWebServer = new MockWebServer();
+        mockWebServer.start();
+
+        // Create WebClient pointing to a mock server
+        WebClient webClient = WebClient.builder()
+            .baseUrl(mockWebServer.url("/").toString())
+            .build();
+        String baseUrl = mockWebServer.url("/").toString();
+
+        acasService = new AcasService(tornadoService, webClient, baseUrl, ACAS_API_KEY);
+        objectMapper = new ObjectMapper();
         errors = new ArrayList<>();
 
         RespondentSumType respondentSumType = new RespondentSumType();
@@ -75,14 +80,6 @@ class AcasServiceTest {
         caseDetails.setCaseTypeId("Leeds");
         caseDetails.setCaseData(caseData);
 
-        String acasCertificate = Files.readString(Paths.get(Objects.requireNonNull(getClass().getClassLoader()
-                .getResource("acasCertificate.json")).toURI()));
-
-        getMockServer().expect(ExpectedCount.once(), requestTo(ACAS_BASE_URL))
-                .andExpect(method(HttpMethod.POST))
-                .andRespond(withStatus(HttpStatus.OK)
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .body(acasCertificate));
         DocumentInfo documentInfo = DocumentInfo.builder()
                 .description("ACAS Certificate - R111111/11/11")
                 .url("http://test.com/documents/random-uuid")
@@ -92,10 +89,28 @@ class AcasServiceTest {
                 .thenReturn(documentInfo);
     }
 
+    @AfterEach
+    void tearDown() throws IOException {
+        if (mockWebServer != null) {
+            mockWebServer.shutdown();
+        }
+    }
+
     @Test
     void getAcasCertificate() throws JsonProcessingException {
+        // Prepare mock response with valid ACAS certificate
+        AcasCertificate acasCertificate = new AcasCertificate();
+        acasCertificate.setCertificateNumber("R111111/11/11");
+        acasCertificate.setCertificateDocument("dGVzdCBwZGYgZGF0YQ=="); // Base64 encoded "test pdf data"
+
+        List<AcasCertificate> certificates = List.of(acasCertificate);
+
+        mockWebServer.enqueue(new MockResponse()
+            .setResponseCode(200)
+            .setHeader(HttpHeaders.CONTENT_TYPE, MediaType.APPLICATION_JSON_VALUE)
+            .setBody(objectMapper.writeValueAsString(certificates)));
+
         errors = acasService.getAcasCertificate(caseDetails, AUTH_TOKEN);
-        System.out.println(errors);
         assertEquals(0, errors.size());
     }
 
@@ -110,26 +125,21 @@ class AcasServiceTest {
 
     @Test
     void unauthorisedResponseFromAcas() throws JsonProcessingException {
-        getMockServer().expect(ExpectedCount.once(), requestTo(ACAS_BASE_URL))
-                .andExpect(method(HttpMethod.POST))
-                .andRespond(withStatus(HttpStatus.UNAUTHORIZED));
+        mockWebServer.enqueue(new MockResponse().setResponseCode(401));
+
         errors = acasService.getAcasCertificate(caseDetails, AUTH_TOKEN);
-        assertEquals("Error retrieving ACAS Certificate", errors.get(0));
+        assertEquals("Error retrieving ACAS Certificate", errors.getFirst());
     }
 
     @Test
     void certificateNotFound() throws JsonProcessingException {
-        getMockServer().expect(ExpectedCount.once(), requestTo(ACAS_BASE_URL))
-                .andExpect(method(HttpMethod.POST))
-                .andRespond(withStatus(HttpStatus.OK)
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .body(NOT_FOUND_OBJECT));
+        mockWebServer.enqueue(new MockResponse()
+            .setResponseCode(200)
+            .setHeader(HttpHeaders.CONTENT_TYPE, MediaType.APPLICATION_JSON_VALUE)
+            .setBody(NOT_FOUND_OBJECT));
         errors = acasService.getAcasCertificate(caseDetails, AUTH_TOKEN);
-        assertEquals("No ACAS Certificate found", errors.get(0));
+        assertEquals("No ACAS Certificate found", errors.getFirst());
 
     }
 
-    private MockRestServiceServer getMockServer() {
-        return MockRestServiceServer.createServer(restTemplate);
-    }
 }
